--- a/app/src/main/res/layout/activity_wall.xml
+++ b/app/src/main/res/layout/activity_wall.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/set_wall"
+        android:weightSum="2"
         android:layout_centerHorizontal="true"
         android:layout_margin="6dp"
         android:orientation="horizontal"
@@ -37,9 +38,10 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_weight="1"
+            android:foreground="@drawable/ripple"
             android:background="@drawable/rounded_button_2"
             android:onClick="downloadImage"
-            android:text="Download Image"
+            android:text="Download"
             android:textColor="@android:color/white" />
 
         <Button
@@ -62,7 +64,7 @@
         android:layout_marginStart="14dp"
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="14dp"
-        android:background="@drawable/rounded_button_2"
+        android:background="@drawable/rounded_button_3"
         android:onClick="setWallpaper"
         android:text="Set Wallpaper"
         android:textColor="@android:color/white" />
