--- a/app/src/main/res/layout/sub_saved_item.xml
+++ b/app/src/main/res/layout/sub_saved_item.xml
@@ -23,9 +23,11 @@
             android:id="@+id/sub_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="14dp"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="14dp"
+            android:layout_marginBottom="14dp"
             android:text="DATE"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/darker_gray"
             android:textSize="20sp" />
 
     </LinearLayout>
