--- a/app/src/main/res/menu/clear_menu.xml
+++ b/app/src/main/res/menu/clear_menu.xml
@@ -1,12 +1,17 @@
 <!--suppress ALL -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".WallActivity">
+    xmlns:tools="http://schemas.android.com/tools">
     <item
-        android:id="@+id/clear_list"
-        android:icon="@drawable/ic_delete"
+        android:id="@+id/alpha"
         android:orderInCategory="50"
-        android:title="CLEAR"
-        app:showAsAction="always" />
+        android:title="Sort Alpha" />
+    <item
+        android:id="@+id/recent"
+        android:orderInCategory="60"
+        android:title="Sort Most Recent" />
+    <item
+        android:id="@+id/oldest"
+        android:orderInCategory="70"
+        android:title="Sort Oldest" />
 </menu>
