--- a/app/src/main/res/layout/activity_rec.xml
+++ b/app/src/main/res/layout/activity_rec.xml
@@ -29,7 +29,7 @@
         android:layout_margin="16dp"
         android:gravity="center"
         android:text="No recommendations found!"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/textColor"
         android:textSize="22sp"
         android:visibility="gone" />
 </RelativeLayout>
