--- a/app/src/main/res/drawable/ic_sort.xml
+++ b/app/src/main/res/drawable/ic_sort.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="40dp"
     android:height="40dp"
-    android:tint="#FFFFFF"
+    android:tint="@color/textColor"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
