--- a/app/src/main/res/drawable/rounded_edit.xml
+++ b/app/src/main/res/drawable/rounded_edit.xml
@@ -3,9 +3,9 @@
 
     <stroke
         android:width="1dp"
-        android:color="#807F7F" />
+        android:color="@color/edit" />
 
-    <solid android:color="#807F7F" />
+    <solid android:color="@color/edit" />
 
     <padding
         android:left="1dp"
