--- a/app/src/main/res/layout/activity_wall.xml
+++ b/app/src/main/res/layout/activity_wall.xml
@@ -49,7 +49,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_weight="1"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/rounded_button_3"
+            android:foreground="@drawable/ripple"
             android:onClick="launchPost"
             android:text="Visit Post"
             android:textColor="@android:color/white" />
@@ -64,7 +65,8 @@
         android:layout_marginStart="14dp"
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="14dp"
-        android:background="@drawable/rounded_button_3"
+        android:background="@drawable/rounded_button"
+        android:foreground="@drawable/ripple"
         android:onClick="setWallpaper"
         android:text="Set Wallpaper"
         android:textColor="@android:color/white" />
