--- a/app/src/main/res/layout/card_rec.xml
+++ b/app/src/main/res/layout/card_rec.xml
@@ -26,7 +26,7 @@
             android:layout_below="@+id/rec_image"
             android:layout_margin="12dp"
             android:text="NAME"
-            android:textColor="@color/white"
+            android:textColor="@color/textColor"
             android:textSize="24sp" />
 
         <TextView
@@ -36,7 +36,7 @@
             android:layout_below="@+id/rec_name"
             android:layout_margin="12dp"
             android:text="A description for the reccomendation"
-            android:textColor="@color/white"
+            android:textColor="@color/secondary"
             android:textSize="18sp" />
     </RelativeLayout>
 
