--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -36,7 +36,7 @@
                 android:layout_marginTop="14dp"
                 android:layout_marginEnd="14dp"
                 android:text="SUB_NAME"
-                android:textColor="@android:color/white"
+                android:textColor="@color/textColor"
                 android:textSize="24sp" />
 
             <TextView
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="14dp"
                 android:text="DOWNLOADED"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/secondary"
                 android:textSize="20sp" />
 
             <TextView
@@ -56,7 +56,7 @@
                 android:layout_marginEnd="14dp"
                 android:layout_marginBottom="14dp"
                 android:text="DATE"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/secondary"
                 android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
