--- a/app/src/main/res/layout/sub_saved_item.xml
+++ b/app/src/main/res/layout/sub_saved_item.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="14dp"
             android:text="NAME"
-            android:textColor="@android:color/white"
+            android:textColor="@color/textColor"
             android:textSize="24sp" />
 
         <TextView
@@ -27,7 +27,7 @@
             android:layout_marginEnd="14dp"
             android:layout_marginBottom="14dp"
             android:text="DATE"
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@color/secondary"
             android:textSize="20sp" />
 
     </LinearLayout>
