--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#D81B1B</color>
-    <color name="cardViewBackground">#2D2E31</color>
+    <color name="cardViewBackground">#F8F8F8</color>
     <color name="chip">#E53935</color>
-    <color name="white">@android:color/white</color>
+    <color name="white">#EAE2E2</color>
+    <color name="textColor">#000000</color>
+    <color name="secondary">#5D5B5B</color>
+    <color name="edit">#CBC8C8</color>
 </resources>
