--- a/app/src/main/res/layout/activity_fav_image.xml
+++ b/app/src/main/res/layout/activity_fav_image.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FavImageActivity">
+    tools:context=".activities.FavImageActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fav_scroll"
