--- a/app/src/main/res/menu/wall_menu.xml
+++ b/app/src/main/res/menu/wall_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".WallActivity">
+    tools:context=".activities.WallActivity">
     <item
         android:id="@+id/fav_image"
         android:icon="@drawable/ic_star_black"
