--- a/app/src/main/res/menu/fab_menu.xml
+++ b/app/src/main/res/menu/fab_menu.xml
@@ -18,5 +18,5 @@
         android:id="@+id/random"
         android:icon="@drawable/ic_shuffle"
         android:orderInCategory="70"
-        android:title="RANDOM" />
+        android:title="CHOOSE RANDOM" />
 </menu>
