--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,14 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="open">
+        <item name="android:icon">@drawable/ic_open_light</item>
+    </style>
+
+    <style name="filled">
+        <item name="android:icon">@drawable/ic_filled_light</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
