--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -11,8 +11,8 @@
         app:showAsAction="never" />
 
     <item
+        style="@style/filled"
         android:id="@+id/saved_subs"
-        android:icon="@drawable/ic_star_black"
         android:orderInCategory="50"
         android:title="SAVED"
         app:showAsAction="always" />
