--- a/app/src/main/res/menu/wall_menu.xml
+++ b/app/src/main/res/menu/wall_menu.xml
@@ -5,7 +5,7 @@
     tools:context=".activities.WallActivity">
     <item
         android:id="@+id/fav_image"
-        android:icon="@drawable/ic_star_black"
+        style="@style/open"
         android:orderInCategory="50"
         android:title="SAVED"
         app:showAsAction="always" />
