--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,4 +9,5 @@
     <color name="textColor">#FFFFFF</color>
     <color name="secondary">@android:color/secondary_text_dark</color>
     <color name="edit">#807F7F</color>
+    <color name="fill">#FFFFFF</color>
 </resources>
