--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="textColor">#000000</color>
     <color name="secondary">#5D5B5B</color>
     <color name="edit">#CBC8C8</color>
+    <color name="fill">#000000</color>
 </resources>
