--- a/app/src/main/res/xml/next_wallpaper_info.xml
+++ b/app/src/main/res/xml/next_wallpaper_info.xml
@@ -4,6 +4,7 @@
     android:initialLayout="@layout/next_wallpaper"
     android:minWidth="40dp"
     android:minHeight="40dp"
+    android:resizeMode="none"
     android:previewImage="@drawable/example_appwidget_preview"
     android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen" />
