--- a/app/src/main/res/layout/next_wallpaper.xml
+++ b/app/src/main/res/layout/next_wallpaper.xml
@@ -5,6 +5,7 @@
     android:padding="@dimen/widget_margin">
 
     <ImageView
+        android:layout_centerInParent="true"
         android:id="@+id/refresh_wall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
