--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -175,6 +175,35 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/random_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="12dp"
+                    android:layout_weight="2"
+                    android:text="Random refresh wallpaper location: "
+                    android:textColor="@color/textColor"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/random_location_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="12dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_button"
+                    android:foreground="@drawable/ripple"
+                    android:onClick="setRandomLocation"
+                    android:text="Home"
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
+
             <Switch
                 android:id="@+id/gif_switch"
                 android:layout_width="match_parent"
