--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -255,6 +255,16 @@
             android:layout_margin="10dp"
             android:background="@drawable/rounded_button"
             android:foreground="@drawable/ripple"
+            android:onClick="deleteDownloads"
+            android:text="Delete Downloads"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/rounded_button"
+            android:foreground="@drawable/ripple"
             android:onClick="clearCache"
             android:text="Clear Image Cache"
             android:textColor="@android:color/white" />
