--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -176,6 +176,8 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/refresh_location_setting"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
