--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,4 +10,5 @@
     <color name="secondary">@android:color/secondary_text_dark</color>
     <color name="edit">#807F7F</color>
     <color name="fill">#FFFFFF</color>
+    <color name="grey">#272626</color>
 </resources>
